--- a/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.html
+++ b/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.html
@@ -9,19 +9,25 @@
              fxLayout="column" fxLayoutAlign="center center"
              fxLayout.gt-sm="row" fxLayoutAlign.gt-sm="space-between center">
 
-            <!-- APP TITLE -->
-            <div class="logo mb-24 mb-md-0"
-                 fxLayout="row" fxLayoutAlign="start center">
-                <mat-icon class="logo-icon s-32 mr-16" [@animate]="{value:'*',params:{delay:'50ms',scale:'0.2'}}">
-                    contactless
-                </mat-icon>
-                <span class="logo-text h1" [@animate]="{value:'*',params:{delay:'100ms',x:'-25px'}}">
-                    Campañas
-                </span>
-            </div>
-            <!-- / APP TITLE -->
+             
+
+             
+         <div class=" icon-lg ml-sm-32 " fxLayout="row" fxLayoutAlign="center center">
+
+
+            <mat-icon class="logo-icon mr-24"
+            >assignment
+   </mat-icon>
+       
+
+    </div>
+
 
              <!-- SEARCH -->
+
+             <div class="ml-sm-32 icon-xs" fxLayout="row" fxLayoutAlign="center center">
+
+        </div>
              <div  class="search-wrapper mx-32 mx-md-0">
                 <div class="search" fxFlex fxLayout="row" fxLayoutAlign="start center">
                     <mat-icon>search</mat-icon>
