--- a/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.scss
+++ b/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.scss
@@ -223,3 +223,17 @@ products-campaigns {
 
 
 
+.icon-lg {
+    display: flex !important;
+
+    @include media-breakpoint('xs') {
+
+        display: none !important;
+
+}
+
+}
+
+.logo-icon {
+    font-size: 50px;
+}
