--- a/src/app/main/apps/contacts/contact-list/contact-list.component.html
+++ b/src/app/main/apps/contacts/contact-list/contact-list.component.html
@@ -1,34 +1,40 @@
+<div id="contact-list" class="page-layout-campaign carded fullwidth inner-scroll">
 
+    <div class="center" fusePerfectScrollbar>
     <!-- HEADER -->
-    <div class="header accent p-16 p-sm-24" fxLayout="column" fxLayoutAlign="start"
+    <div class="header accent" fxLayout="column" fxLayoutAlign="start"
          fxLayout.gt-xs="row" fxLayoutAlign.gt-xs="space-between center">
 
-        <!-- APP TITLE -->
-        <div fxLayout="row" fxLayoutAlign="start center">
 
-            <button mat-icon-button class="sidebar-toggle mr-12" fxHide.gt-sm
-                    (click)="toggleSidebar('contacts-main-sidebar')">
-                <mat-icon>menu</mat-icon>
-            </button>
 
-            <div class="logo" fxLayout="row" fxLayoutAlign="start center">
-                <mat-icon class="logo-icon mr-16"
-                          [@animate]="{value:'*',params:{delay:'50ms',scale:'0.2'}}">account_box
-                </mat-icon>
-                <span class="logo-text h1" [@animate]="{value:'*',params:{delay:'100ms',x:'-25px'}}">
-                    Invitados
-                </span>
-            </div>
+         <div class=" icon-lg ml-sm-32 " fxLayout="row" fxLayoutAlign="center center">
 
-        </div>
+
+            <mat-icon class="logo-icon mr-24"
+            >group_add
+   </mat-icon>
+       
+
+    </div>
+
+
+   
         <!-- / APP TITLE -->
 
         <!-- SEARCH -->
-        <div class="ml-sm-32" fxLayout="row" fxLayoutAlign="center center" fxFlex>
+        <div class="ml-sm-32 " fxLayout="row" fxLayoutAlign="center center" >
+            <div class="ml-sm-32 icon-xs" fxLayout="row" fxLayoutAlign="center center">
+           
+
+        </div>
+
 
             <div class="search-wrapper mt-16 mt-sm-0">
 
-                <div class="search" fxFlex fxLayout="row" fxLayoutAlign="start center">
+
+                <div class="search" fxFlex="100" fxLayout="row" fxLayoutAlign="start center">
+
+                    
                     <mat-icon>search</mat-icon>
                     <input [formControl]="searchInput" placeholder="Buscar invitado">
                 </div>
@@ -47,7 +53,7 @@
 
 
  <!-- CENTER -->
-        <div class="center">
+   
 
 
  
@@ -219,3 +225,4 @@ class="paginator-left"
 
 </div>
 
+</div>
