--- a/src/app/main/apps/contacts/contact-list/contact-list.component.scss
+++ b/src/app/main/apps/contacts/contact-list/contact-list.component.scss
@@ -1,48 +1,138 @@
 @import "src/@fuse/scss/fuse";
 
+
+@import "src/@fuse/scss/fuse";
+
 contacts-contact-list {
     display: flex;
     flex: 1 1 auto;
     width: 100%;
+    #contact-list {
 
-    .mat-table {
-        width: 100%;
-        background: transparent;
-        box-shadow: none;
 
-        .mat-column-checkbox {
-            flex: 0 1 64px;
-            padding-left: 18px;
-        }
 
-        .mat-column-avatar {
-            flex: 0 1 64px;
-        }
+        > .center {
 
-        .mat-column-buttons {
-            flex: 0 1 80px;
-        }
+        
+            > .header {
 
-        .mat-row {
-            position: relative;
-            cursor: pointer;
-            padding: 8px;
+                padding: 2%;
 
-            .mat-cell {
-                min-width: 0;
+                
+    height: 100% !important;
+    min-height: 100px !important;
+    max-height: 100px !important;
 
-                &.mat-column-detail-button {
-                    flex: 0 1 auto;
-                    padding: 0 24px 0 0;
+    
+    @include media-breakpoint('xs') {
+        width: 360px;
+    }
 
-                    @include media-breakpoint('gt-md') {
-                        display: none;
+                .search-wrapper {
+                    width: 100%;
+                    max-width: 480px;
+                    border-radius: 28px;
+                    overflow: hidden;
+                    @include mat-elevation(1);
+
+                    @include media-breakpoint('xs') {
+                        width: 100%;
+                    }
+
+                    .search {
+                        width: 100%;
+                        height: 48px;
+                        line-height: 48px;
+                        padding: 0 18px;
+
+                        input {
+                            width: 100%;
+                            height: 48px;
+                            min-height: 48px;
+                            max-height: 48px;
+                            padding: 0 16px;
+                            border: none;
+                            outline: none;
+                        }
+                    }
+                }
+
+                @include media-breakpoint('lt-md') {
+                    padding: 8px 0;
+                    height: 100px !important;
+                    min-height: 100px !important;
+                    max-height: 100px !important;
+                }
+            }
+
+
+            .mat-table {
+                width: 100%;
+                background: transparent;
+                box-shadow: none;
+        
+                .mat-column-checkbox {
+                    flex: 0 1 64px;
+                    padding-left: 18px;
+                }
+        
+                .mat-column-avatar {
+                    flex: 0 1 64px;
+                }
+        
+                .mat-column-buttons {
+                    flex: 0 1 80px;
+                }
+        
+                .mat-row {
+                    position: relative;
+                    cursor: pointer;
+                    padding: 8px;
+        
+                    .mat-cell {
+                        min-width: 0;
+        
+                        &.mat-column-detail-button {
+                            flex: 0 1 auto;
+                            padding: 0 24px 0 0;
+        
+                            @include media-breakpoint('gt-md') {
+                                display: none;
+                            }
+                        }
                     }
                 }
             }
         }
     }
+
+
+    form {
+        width: 100%;
+        max-width: 800px !important;
+    }
+
+    .form-errors-model {
+        flex: 1;
+
+        code {
+            background: none !important;
+        }
+    }
+
+
 }
+
+.empty-event {
+    height: 119%;
+    max-width: 190%;
+}
+
+.empty-card {
+    align-items: center;
+}
+
+
 
 #add-contact-button {
     position: absolute;
@@ -115,7 +205,7 @@ contacts-contact-list {
 
 contacts-contact-list {
 
-    display: table !important;
+    display: contents !important;
 
 }
 
@@ -204,6 +294,7 @@ contacts-contact-list {
 .table-invited {
     height: 500px;
     overflow: auto;
+    display: table !important;
 }
 
 
@@ -214,4 +305,52 @@ contacts-contact-list {
 .paginator-left {
 
     float: left;
+}
+
+.icon-size{
+
+    font-size: 50px;
+
+    margin-bottom: 50%;
+
+    @include media-breakpoint('xs') {
+
+        font-size: 20px;
+       
+        margin-bottom: 20%;
+
+}
+}
+
+.icon-lg {
+    display: flex !important;
+
+    @include media-breakpoint('xs') {
+
+        display: none !important;
+
+}
+
+}
+
+
+.icon-xs {
+    display: none;
+
+    @include media-breakpoint('xs') {
+
+        display: flex;
+
+}
+
+}
+
+
+.logo-icon {
+    font-size: 50px;
+}
+
+.mat-paginator-page-size {
+    display: none !important;
+
 }
