--- a/src/app/main/apps/e-commerce/product/product.component.html
+++ b/src/app/main/apps/e-commerce/product/product.component.html
@@ -1,3 +1,5 @@
+
+
 <div id="product" class="page-layout simple fullwidth" fxLayout="column">
 
     <!-- HEADER -->
@@ -10,13 +12,13 @@
                 <mat-icon>arrow_back</mat-icon>
             </button>
 
-            <div class="product-image-icon mr-8 mr-sm-16" [@animate]="{value:'*',params:{delay:'50ms',scale:'0.2'}}">
+            <div class="product-image-icon mr-8 mr-sm-16" >
                 <img *ngIf="product.images[0]" [src]="product.images[0].url">
                 <img *ngIf="!product.images[0]" [src]="'assets/images/add_event_white.png'">
             </div>
 
             <div fxLayout="column" fxLayoutAlign="start start"
-                [@animate]="{value:'*',params:{delay:'100ms',x:'-25px'}}">
+               >
                 <div class="h2" *ngIf="pageType ==='edit'">
                     {{product.eventName}}
                 </div>
@@ -36,7 +38,7 @@
         </button>
 
         <button mat-raised-button class="save-product-button" [disabled]="(productForm.invalid || productForm.pristine ) && !removeTag ? true:false"
-            *ngIf="pageType ==='edit'" (click)="saveProduct()">
+            *ngIf="pageType ==='edit'" (click)="saveProduct(true)">
             <span>GUARDAR</span>
         </button>
     </div>
@@ -47,152 +49,155 @@
     <div class="content p-24">
 
 
-        <div class="mb-24" class="content-steper" fxLayout="column" fxLayoutAlign="start" fxLayout.gt-md="row">
+        <div class="mb-24" class="content-steper mat-card mat-elevation-z4" fxLayout="column" fxLayoutAlign="start" fxLayout.gt-md="row">
 
             <!-- REACTIVE FORM EXAMPLE -->
 
 
-            <div class="horizontal-stepper-wrapper">
+            <div>
 
                 <!-- HORIZONTAL STEPPER EXAMPLE -->
-                
-                <mat-horizontal-stepper class="mat-elevation-z4" linear #stepper>
 
-                    <mat-step [completed]="isCreated" [editable]="isCreated">
+                
+                <mat-tab-group mat-align-tabs="start" (selectedTabChange)="onClickTab($event)" [selectedIndex]="selectedIndex">
+                    <mat-tab label="General">
 
                         <form class="p-24 mr-24" fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto"
-                            name="productForm" [formGroup]="productForm">
+                        name="productForm" [formGroup]="productForm">
 
-                            <ng-template matStepLabel>General</ng-template>
 
-                            <div fxLayout="row" fxLayoutAlign="start start" fxFlex="1 0 auto">
-                
-                                  <div [ngClass]="!_campaignService.imgProductLoad? 'container-empty': 'container-load'" >
-                                    <img [src]="_campaignService.previewUrlEvent"  class="img-load"  alt="" />
-                                    <input hidden  id="fileUpload" type="file" #fileInput formControlName="img"/>
-                                    <div class="overlay"></div>
-                                    <div></div>
+
+                        <mat-form-field appearance="outline" fxFlex  fxFlex="100" class="pl-4" class="container">
+                            <mat-label>Imagen</mat-label>
+                            <input name="imgTitle" formControlName="imgTitle" matInput>
+                            <mat-icon matSuffix class="secondary-text">
+                            
+                                    <input hidden id="fileUpload" type="file" #fileInput />
+                    
                                     <button mat-fab  (click)="fileUpload()"  class="button fuse-white mt-24 mt-md-0">
                                         <mat-icon>add_photo_alternate</mat-icon>
                                     </button>
-                                  </div>
-                            </div>
-
-                            <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
-
-                                <mat-form-field appearance="outline" fxFlex="100">
-                                    <mat-label>Nombre evento</mat-label>
-                                    <input matInput placeholder="Convocatoria nombre" name="name" formControlName="name"
-                                        required>
-                                </mat-form-field>
-
-                            </div>
-                            <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
+                            
+                            </mat-icon>
+                        </mat-form-field>
 
 
-                                <mat-form-field appearance="outline" floatLabel="always" class="w-100-p" fxFlex="100">
-                                    <mat-label>Empresa</mat-label>
-                                    <input matInput formControlName="company">
-                                    <mat-icon class="mat-icon-company" matSuffix>domain</mat-icon>
-                                </mat-form-field>
+                        <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+
+                            <mat-form-field appearance="outline" fxFlex="100">
+                                <mat-label>Nombre evento</mat-label>
+                                <input matInput placeholder="Convocatoria nombre" name="name" formControlName="name"
+                                    required>
+                            </mat-form-field>
+
+                        </div>
+                        <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
 
 
-                                <mat-form-field appearance="outline" floatLabel="always" class="w-100-p" fxFlex="100">
-                                    <mat-label>Descripción</mat-label>
-                                    <textarea matInput placeholder="descripción del evento" name="description"
-                                        formControlName="description" rows="5">
-                                                      </textarea>
-                                </mat-form-field>
+                            <mat-form-field appearance="outline" floatLabel="always" class="w-100-p" fxFlex="100">
+                                <mat-label>Empresa</mat-label>
+                                <input matInput formControlName="company">
+                                <mat-icon class="mat-icon-company" matSuffix>domain</mat-icon>
+                            </mat-form-field>
 
-                            </div>
 
-                            <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
+                            <mat-form-field appearance="outline" floatLabel="always" class="w-100-p" fxFlex="100">
+                                <mat-label>Descripción</mat-label>
+                                <textarea matInput placeholder="descripción del evento" name="description"
+                                    formControlName="description" rows="5">
+                                                  </textarea>
+                            </mat-form-field>
 
+                        </div>
+
+                        <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
+
+                  
+
+                            <mat-form-field appearance="outline" fxFlex="100">
+                                <mat-label>Dirección</mat-label>
+                                <input matInput placeholder="Dirección" name="address" formControlName="address"
+                                    >
+                            </mat-form-field>
+
+            
+                            <mat-form-field appearance="outline" floatLabel="always" fxFlex="100" class="w-100-p">
+
+                                <mat-label>Fecha evento</mat-label>
+                                <input matInput [matDatepicker]="picker" formControlName="date">
+                                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                                <mat-datepicker #picker></mat-datepicker>
+
+                            </mat-form-field>
+
+
+                            <mat-form-field appearance="outline" floatLabel="always" class="w-100-p">
+
+                                <mat-label>Tags</mat-label>
+
+                                <mat-chip-list #tagList >
+
+                                    <mat-chip *ngFor="let tag of product.tags" [removable]="true"
+                                        (removed)="removeDetected(tag)" >
+                                        {{tag}}
+                                        <mat-icon matChipRemove>cancel</mat-icon>
+                                    </mat-chip>
+
+                                    <input name="tags"  formControlName="tags"
+                                    [matChipInputFor]="tagList" [matChipInputAddOnBlur]="true"
+                                        (matChipInputTokenEnd)="product.addTag($event)" />
+
+                                </mat-chip-list>
+
+                            </mat-form-field>
+
+                     <div class="slide-bottom w-100-p">
+                        <mat-slide-toggle [checked]="true" formControlName="active">Evento abierto</mat-slide-toggle>
+                     </div>
+
+
+
+                        </div>
+
+                        <button *ngIf="(isCreated && productForm.pristine) && !removeTag " class="mr-8 w-30-p" mat-raised-button  type="button"
+                        (click)="nextStep()"
+                        color="accent">
+                        Siguiente
+                    </button>
+
+                        <button *ngIf="pageType ==='new'" [disabled]="productForm.invalid"  (click)="addProduct(true)" class="mr-8 w-30-p" mat-raised-button type="button"
+                        color="accent">
+                        Crear
+                    </button>
+
+                        <button *ngIf="(pageType ==='edit' && !productForm.pristine) || removeTag" (click)="saveProduct(true)" class="mr-8 w-30-p" mat-raised-button  type="button"
+                            color="accent">
+                            Siguiente <mat-icon>save</mat-icon>
+                        </button>
+                    </form>
+
+                    </mat-tab>
+                    <mat-tab label="Invitados" [disabled]='!isCreated'>
+
+                        <div  fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto">
                       
-
-                                <mat-form-field appearance="outline" fxFlex="100">
-                                    <mat-label>Dirección</mat-label>
-                                    <input matInput placeholder="Dirección" name="address" formControlName="address"
-                                        >
-                                </mat-form-field>
-
-                
-                                <mat-form-field appearance="outline" floatLabel="always" fxFlex="100" class="w-100-p">
-
-                                    <mat-label>Fecha evento</mat-label>
-                                    <input matInput [matDatepicker]="picker" formControlName="date">
-                                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                                    <mat-datepicker #picker></mat-datepicker>
-
-                                </mat-form-field>
-
-
-                                <mat-form-field appearance="outline" floatLabel="always" class="w-100-p">
-
-                                    <mat-label>Tags</mat-label>
-
-                                    <mat-chip-list #tagList >
-
-                                        <mat-chip *ngFor="let tag of product.tags" [removable]="true"
-                                            (removed)="removeDetected(tag)" >
-                                            {{tag}}
-                                            <mat-icon matChipRemove>cancel</mat-icon>
-                                        </mat-chip>
-
-                                        <input name="tags"  formControlName="tags"
-                                        [matChipInputFor]="tagList" [matChipInputAddOnBlur]="true"
-                                            (matChipInputTokenEnd)="product.addTag($event)" />
-
-                                    </mat-chip-list>
-
-                                </mat-form-field>
-
-                         <div class="slide-bottom w-100-p">
-                            <mat-slide-toggle [checked]="true" formControlName="active">Evento abierto</mat-slide-toggle>
-                         </div>
-
-
-
-                            </div>
-
-                            <button *ngIf="(isCreated && productForm.pristine) && !removeTag " class="mr-8 w-30-p" mat-raised-button matStepperNext type="button"
-                            color="accent">
-                            Siguiente
-                        </button>
-
-                            <button *ngIf="pageType ==='new'" [disabled]="productForm.invalid"  (click)="addProduct()" class="mr-8 w-30-p" mat-raised-button type="button"
-                            color="accent">
-                            Crear
-                        </button>
-
-                            <button *ngIf="(pageType ==='edit' && !productForm.pristine) || removeTag" (click)="saveProduct()" class="mr-8 w-30-p" mat-raised-button matStepperNext type="button"
-                                color="accent">
-                                Siguiente <mat-icon>save</mat-icon>
-                            </button>
-                        </form>
-
-                    </mat-step>
-
-                    <mat-step [completed]="isCreated" [editable]="isCreated">
-                        <ng-template matStepLabel>Invitados</ng-template>
                         <contacts></contacts>
 
-                        <button class="btn-next-contact mr-8 w-30-p" mat-raised-button matStepperNext type="button"
-                            color="accent">
-                            Siguiente
-                        </button>
-
-
-                    </mat-step>
-
-
-
-
-                    <mat-step [completed]="isCreated" [editable]="isCreated">
-
-                        <ng-template matStepLabel>Campaña</ng-template>
-
-
+                
+                       <div class="p-24 mr-24">
+                        <button  class="mr-8 w-30-p" mat-raised-button  type="button"
+                        color="accent"
+                        (click)="nextStep()">
+                        Siguiente 
+                    </button>
+                       </div>
+    
+                        </div>
+    
+                        
+                    </mat-tab>
+                    <mat-tab label="Campañas" [disabled]='!isCreated'>
+                        
                         <div class="dialog-content-wrapper">
 
 
@@ -229,13 +234,9 @@
 
 -->
                         </div>
-                    </mat-step>
-
-
-
-
-                </mat-horizontal-stepper>
-                <!-- / HORIZONTAL STEPPER EXAMPLE -->
+                    </mat-tab>
+                  </mat-tab-group>
+                
 
             </div>
 
@@ -262,3 +263,4 @@
     <!-- / CONTENT -->
 
 </div>
+
