--- a/src/app/main/apps/e-commerce/product/product.component.scss
+++ b/src/app/main/apps/e-commerce/product/product.component.scss
@@ -389,4 +389,14 @@ border-radius: 3%;
 
 }
 
+.form-custom {
+
+   padding: 24px;
+
+    @include media-breakpoint('xs') {
+        padding: -2px !important;
+}
+
+
+}
 
