--- a/src/app/main/apps/e-commerce/product/product.component.html
+++ b/src/app/main/apps/e-commerce/product/product.component.html
@@ -64,10 +64,10 @@
 
                        
 
-                        <form class="p-24 mr-24" fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto"
+                        <form class="form-custom mr-24" fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto"
                         name="productForm" [formGroup]="productForm">
 
-                        <div class="h2 mb-16">Formulario de información general</div>
+                        <div class="h2 mb-16">Ingrese información general</div>
 
                         <mat-form-field appearance="outline" fxFlex  fxFlex="100" class="pl-4" class="container">
                             <mat-label>Imagen</mat-label>
@@ -94,7 +94,6 @@
 
                         </div>
                         <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
-
 
                             <mat-form-field appearance="outline" floatLabel="always" class="w-100-p" fxFlex="100">
                                 <mat-label>Empresa</mat-label>
