send function 2.0 ready onfire porno

--- a/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.html
+++ b/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.html
@@ -106,7 +106,7 @@
                     <div class="content" fxLayout="column" fxLayoutAlign="center center" fxFlex="1 1 auto">
                        
 
-                        <img [src]="c.imgBlob">
+                        <img [src]="c.imgBlob" class="img-campaign">
 
                         <!--
                         <div class="h5 text-bold secondary-text" fxLayout> {{c.update | date:'short'}}</div>
