--- a/src/app/main/apps/e-commerce/product/campaigns/dialog/send/send.component.scss
+++ b/src/app/main/apps/e-commerce/product/campaigns/dialog/send/send.component.scss
@@ -12,8 +12,24 @@
         width: 400px;
     }
 
+    .mat-dialog-container {
+        padding: 0;
 
+        .mat-toolbar {
+            flex: 1 0 auto;
+            min-height: initial;
+        }
 
+        .toolbar-bottom {
+            height: auto;
+        }
+    }
+
+    .dialog-content-wrapper {
+        max-height: 85vh;
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 .slide-bottom {
@@ -224,9 +240,17 @@ login {
     margin-bottom: 7%;
 }
 
-
 .content-send {
+    margin-top: 2%;
+
+
+}
+
+.content-send-spinner {
     margin-top: 4%;
+
+    @include media-breakpoint('xs') {
+        margin-top: 20%;    }
 }
 
 .center-send {
@@ -236,8 +260,31 @@ login {
     align-items: center;
     flex-direction: row;
     box-sizing: border-box;
-    /* display: flex; */
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-top: 10%;
+    width: 100%;
 }
+
+.center-send-spinner {
+    place-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    flex-direction: row;
+    box-sizing: border-box;
+    margin-left: 39%;
+    /* margin-right: 14%; */
+    margin-top: 6%;
+@include media-breakpoint('xs') {
+    margin-left: 30%;
+   
+}
+
+}
+
+
+.fail {
+    margin-top: 3%;
+}
+
 
