--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,9 +22,10 @@ contacts-contact-list .mat-table .mat-row .mat-cell {
 }
 
 .my-class-send .mat-dialog-container {
-    width: 1000px !important;
+    width: 600px !important;
     height: 300px !important;
     padding: 0px;
+    
 }
 
 .my-class-contact-list .mat-dialog-container {
@@ -32,6 +33,17 @@ contacts-contact-list .mat-table .mat-row .mat-cell {
     height: 300px !important;
     padding: 0px;
 }
+
+
+.mat-progress-bar-fill::after {
+    background-color: #00bb2e !important;
+
+  }
+
+  .mat-progress-bar-buffer {
+    background-color: #f0f1f0!important;
+  }
+
 
 
 
