--- a/src/app/main/apps/dashboards/analytics/analytics.component.scss
+++ b/src/app/main/apps/dashboards/analytics/analytics.component.scss
@@ -158,3 +158,13 @@
     }
     
 }
+
+.card-activity {
+    padding: 1%;
+
+    @include media-breakpoint('xs') {
+           
+        padding: 3%;
+
+    }
+}
