--- a/src/app/main/pages/authentication/lock/lock.component.html
+++ b/src/app/main/pages/authentication/lock/lock.component.html
@@ -1,4 +1,4 @@
-<div id="lock" fxLayout="column">
+<div *ngIf="!_formInvitationService.loadingPage"  id="lock" fxLayout="column">
 
     <div id="lock-form-wrapper" fxLayout="column" fxLayoutAlign="center center">
 
