open event form

--- a/src/app/main/apps/dashboards/analytics/analytics.component.html
+++ b/src/app/main/apps/dashboards/analytics/analytics.component.html
@@ -73,9 +73,8 @@
         </div>
 
         <div class="position-relative h-256 pb-16 blue-600">
-
-
             <canvas baseChart
+            class="baseChart"
             [datasets]="e.widget1.datasets[widget1SelectedYear]"
             [labels]="e.widget1.labels"
             [colors]="e.widget1.colors"
